--- a/style.css
+++ b/style.css
@@ -19,13 +19,8 @@ body {
   height: 100vh;
   background-color: hs1(var(--hue), 100%, 20%);
 }
-body.correct {
-  --hue: var(--hue-correct);
-}
-body.wrong {
-    -hue: var(--hue-wrong);
-}
 .containter {
+  position: relative;
   width: 800px;
   max-width: 80%;
   background-color: white;
@@ -33,44 +28,23 @@ body.wrong {
   padding: 10px;
   box-shadow: 0 0 10px 2px;
 }
-.btn-grid{
+#start-btn {
     display: grid;
     grid-template-columns: repeat(2, auto);
     gap: 10px;
     margin: 20px 0;
-}
-.btn {
-    --hue: var(--hue-neutral);
-    border: 1px solid hsl(var(--hue), 100%, 30%);
-    background-color: hsl(var(--hue), 100%, 50%);
-    border-radius: 5px;
-    padding: 5px 10px;
-    color: white;
-    outline: none;
-}
-.btn:hover{
-    border-color: black;
-
-}
-.btn.correct {
-    --hue: var(--hue-correct);
-    color: black;
-
-}
-.btn.wrong {
-    --hue: var(--hue-wrong);
-}
-.start-btn , .next-btn {
-    font-size: 1.5rem;
+     font-size: 1.5rem;
     font-weight: bold;
     padding: 10px 20px;
 
 }
-.control {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#start-btn:hover{
+    border-color: black;
+   
 }
-.hide {
-    display: none
+#questioncontainer {
+  margin: 30px
+}
+#timeRemaining{
+  justify-content: flex-end;
 }
